--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h1>Sketch Identification
         <button id="show_sketch" class="btn btn-info" data-toggle="modal" data-target="#myModal">Show Sketch</button>
       </h1>
-      <p id="label">Label : </p>
+      <p id="sketch">Your sketch : </p>
       <p id="confidence">Confidence : </p>
       <p id="sketch_name">Sketch to be drawn : </p>
       <button class="btn btn-danger btn-lg" onclick="clearCanvas()">Clear Canvas</button>
